--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.4.13</version>
-<!--      <version>&lt;!&ndash; specify version &ndash;&gt;</version>-->
     </dependency>
 
     <dependency>
@@ -53,4 +52,19 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version> <!-- Use the appropriate version -->
+        <configuration>
+          <includes>
+            <include>**/*Test.java</include> <!-- Include your test classes -->
+          </includes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
